Wrapping up for v0.1.0 release

--- a/pages/index.html
+++ b/pages/index.html
@@ -29,7 +29,7 @@
           <button class="barButton" id="refreshButton">&#10227</button>
         </div>
         <div id="rightRightPart">
-          <button class="barButton" id="lockButton">&#128275</button>
+          <!-- <button class="barButton" id="settingsButton">&#9881</button> -->
         </div>
       </div>
       
