--- a/pages/index.html
+++ b/pages/index.html
@@ -16,8 +16,8 @@
   <body>
     <div id="tabBar">
       <div id="leftPart">
-        <button class="barButton" id="backButton">&#60</button>
-        <button class="barButton" id="forwardButton">&#62</button>
+        <button class="barButton" id="backButton" tabindex="-1">&#60</button>
+        <button class="barButton" id="forwardButton" tabindex="-1">&#62</button>
       </div>
 
       <div id="centerPart">
@@ -26,10 +26,10 @@
 
       <div id="rightPart">
         <div id="leftRightPart">
-          <button class="barButton" id="refreshButton">&#10227</button>
+          <button class="barButton" id="refreshButton" tabindex="-1">&#10227</button>
         </div>
         <div id="rightRightPart">
-          <!-- <button class="barButton" id="settingsButton">&#9881</button> -->
+          <!-- <button class="barButton" id="settingsButton" tabindex="-1">&#9881</button> -->
         </div>
       </div>
       
