Loading indicator and basic dropdown prototype done!

--- a/pages/index.html
+++ b/pages/index.html
@@ -21,7 +21,7 @@
       </div>
 
       <div id="centerPart">
-        <input id="searchBar" spellcheck="false" type="text" placeholder="Search or enter website name" value="">
+        <input id="searchBar" spellcheck="false" type="text" placeholder="Search or enter website name" value="" tabindex="-1">
       </div>
 
       <div id="rightPart">
@@ -29,13 +29,14 @@
           <button class="barButton" id="refreshButton" tabindex="-1">&#10227</button>
         </div>
         <div id="rightRightPart">
-          <!-- <button class="barButton" id="settingsButton" tabindex="-1">&#9881</button> -->
+          <button class="barButton" id="settingsButton" tabindex="-1">&#9881</button>
         </div>
       </div>
       
     </div>
 
     <div id="progressBar"></div>
+    
     <!-- You can also require other files to run in this process -->
     <script src="../dist/renderer.js"></script>
   </body>
