--- a/pages/settings.html
+++ b/pages/settings.html
@@ -5,8 +5,11 @@
   </head>
   <body>
     <div id="optionsList">
-      <div id="darkTheme"><span>Toggle dark mode</span><input type="checkbox"></div>
+      <div class="row"><div class="rowItem">Dark mode</div><div class="rowItem checkbox" id="themeToggle"></div></div>
+      <div class="row"><div class="rowItem">Option</div></div>
+      <div class="row"><div class="rowItem">Option</div></div>
+      <div class="row"><div class="rowItem">Option</div></div>
     </div>
-    <!-- <script src="../dist/renderer.js"></script> -->
+    <script src="../dist/settingsRenderer.js"></script>
   </body>
 </html>
