Settings dropdown and switching the theme donegit add .! No saving the last theme yet though...

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div id="optionsList">
-      <div class="row"><div class="rowItem">Dark mode</div><div class="rowItem checkbox" id="themeToggle"></div></div>
+      <div class="row" id="themeToggleRow"><div class="rowItem">Dark mode</div><div class="rowItem checkbox" id="themeToggle"></div></div>
       <div class="row"><div class="rowItem">Option</div></div>
       <div class="row"><div class="rowItem">Option</div></div>
       <div class="row"><div class="rowItem">Option</div></div>
