Added go home, open settings and lock mode buttons and toggles to the settings dropdown and implemented the "go home" one

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -3,12 +3,12 @@
   <head>
     <link rel="stylesheet" type="text/css" href="settingsStyles.css">
   </head>
-  <body>
+  <body id="body">
     <div id="optionsList">
-      <div class="row" id="themeToggleRow"><div class="rowItem">Dark mode</div><div class="rowItem checkbox" id="themeToggle"></div></div>
-      <div class="row"><div class="rowItem">Option</div></div>
-      <div class="row"><div class="rowItem">Option</div></div>
-      <div class="row"><div class="rowItem">Option</div></div>
+      <div class="row" id="goHomeButtonRow"><div>Go home</div></div>
+      <div class="row" id="themeToggleRow"><div>Dark mode</div><div class="rowItem checkbox" id="themeToggle"></div></div>
+      <div class="row" id="lockToggleRow"><div>Lock mode</div><div class="rowItem checkbox" id="lockToggle"></div></div>
+      <div class="row" id="openSettingsButtonRow"><div>Open settings</div></div>
     </div>
     <script src="../dist/settingsRenderer.js"></script>
   </body>
