--- a/pages/index.html
+++ b/pages/index.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <div id="tabBar">
+    <div id="titleBar">
+
       <div id="leftPart">
         <button class="barButton" id="backButton" tabindex="-1">&#60</button>
         <button class="barButton" id="forwardButton" tabindex="-1">&#62</button>
@@ -36,7 +37,17 @@
     </div>
 
     <div id="progressBar"></div>
+
+    <div id="tabBar">
+
+      <div class="tab"><div class="tabLeftPart"></div><div class="tabCenterPart">Google Search</div><div class="tabRightPart"><div class="closeButton">&#10005</div></div></div>
+      <div class="tab"><div class="tabLeftPart"></div><div class="tabCenterPart">Bing Search</div><div class="tabRightPart"><div class="closeButton">&#10005</div></div></div>
+      <div class="tab"><div class="tabLeftPart"></div><div class="tabCenterPart">DuckDuckDuckDuckGoooOOo Search</div><div class="tabRightPart"><div class="closeButton">&#10005</div></div></div>
+
+    </div>
     
+    <div id="spacingBar">
+      
     <!-- You can also require other files to run in this process -->
     <script src="../dist/renderer.js"></script>
   </body>
