Focus the browserview when window is focused

--- a/pages/index.html
+++ b/pages/index.html
@@ -38,7 +38,7 @@
 
     <div id="progressBar"></div>
 
-    <div id="tabBar">
+    <!-- <div id="tabBar">
 
       <div class="tab"><div class="tabLeftPart"></div><div class="tabCenterPart">Google Search</div><div class="tabRightPart"><div class="closeButton">&#10005</div></div></div>
       <div class="tab"><div class="tabLeftPart"></div><div class="tabCenterPart">Bing Search</div><div class="tabRightPart"><div class="closeButton">&#10005</div></div></div>
@@ -46,7 +46,7 @@
 
     </div>
     
-    <div id="spacingBar">
+    <div id="spacingBar"> -->
       
     <!-- You can also require other files to run in this process -->
     <script src="../dist/renderer.js"></script>
