--- a/pages/index.html
+++ b/pages/index.html
@@ -60,6 +60,21 @@
         <div class="closeButtonCont"><div class="closeButton">&#10005</div></div>
       </div>
 
+      <div class="tab">
+        <div class="tabTitle">Google Search</div>
+        <div class="closeButtonCont"><div class="closeButton">&#10005</div></div>
+      </div>
+
+      <div class="tab">
+        <div class="tabTitle">Google Search</div>
+        <div class="closeButtonCont"><div class="closeButton">&#10005</div></div>
+      </div>
+
+      <div class="tab">
+        <div class="tabTitle">Google Search</div>
+        <div class="closeButtonCont"><div class="closeButton">&#10005</div></div>
+      </div>
+
     </div>
 
     <div id="spacingBar"></div>
