FINALLY! Made the tabs UI work!!! Added an ability to cancel the loading of the page by clicking the refresh button while loading. The refresh button changes into a cross while the frame is loading to indicate that too.

--- a/pages/index.html
+++ b/pages/index.html
@@ -40,39 +40,34 @@
     
     <div id="tabBar">
       
+      <!-- <div class="tab">
+        <div class="tabTitle">Google Search</div>
+        <div class="closeButton">&#10005</div>
+      </div> -->
+
       <div class="tab">
         <div class="tabTitle">Google Search</div>
-        <div class="closeButtonCont"><div class="closeButton">&#10005</div></div>
+        <div class="closeButton">&#10005</div>
       </div>
 
       <div class="tab">
         <div class="tabTitle">Google Search</div>
-        <div class="closeButtonCont"><div class="closeButton">&#10005</div></div>
+        <div class="closeButton">&#10005</div>
       </div>
 
       <div class="tab">
         <div class="tabTitle">Google Search</div>
-        <div class="closeButtonCont"><div class="closeButton">&#10005</div></div>
+        <div class="closeButton">&#10005</div>
       </div>
 
       <div class="tab">
         <div class="tabTitle">Google Search</div>
-        <div class="closeButtonCont"><div class="closeButton">&#10005</div></div>
+        <div class="closeButton">&#10005</div>
       </div>
 
       <div class="tab">
         <div class="tabTitle">Google Search</div>
-        <div class="closeButtonCont"><div class="closeButton">&#10005</div></div>
-      </div>
-
-      <div class="tab">
-        <div class="tabTitle">Google Search</div>
-        <div class="closeButtonCont"><div class="closeButton">&#10005</div></div>
-      </div>
-
-      <div class="tab">
-        <div class="tabTitle">Google Search</div>
-        <div class="closeButtonCont"><div class="closeButton">&#10005</div></div>
+        <div class="closeButton">&#10005</div>
       </div>
 
     </div>
