Made favorites page UI; reload button is now disabled on the home page; added transitions, that's about it

--- a/pages/favorites.html
+++ b/pages/favorites.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="favorites.css">
+        <link rel="stylesheet" type="text/css" href="favoritesStyles.css">
     </head>
     <body>
+        <!-- <div id="search">
+            <h1>Search</h1>
+            <div id="searchBarContainer">
+                <input id="searchBar"></input>
+                <button id="clearSearch">&#10005</button>
+            </div>
+        </div> -->
         <div id="favorites">
             <h1>Favourites</h1>
             <div class="row">
@@ -11,13 +18,17 @@
                 <div class="icon">A</div>
                 <div class="icon">A</div>
                 <div class="icon">A</div>
+                <div class="icon">A</div>
             </div>
             <div class="row">
                 <div class="icon">A</div>
                 <div class="icon">A</div>
                 <div class="icon">A</div>
                 <div class="icon">A</div>
+                <div class="icon">A</div>
             </div>
         </div>
+
+        <script src="../dist/favorites.js"></script>
     </body>
 </html>
