--- a/pages/index.html
+++ b/pages/index.html
@@ -27,7 +27,7 @@
 
       <div id="rightPart">
         <div id="leftRightPart">
-          <button class="barButton" id="refreshButton" tabindex="-1">&#10227</button>
+          <button class="barButton" id="refreshButton" tabindex="-1" disabled="true">&#10227</button>
         </div>
         <div id="rightRightPart">
           <button class="barButton" id="settingsButton" tabindex="-1">&#9881</button>
@@ -40,10 +40,20 @@
     
     <div id="tabBar">
       
-      <!-- <div class="tab">
+      <div class="tab active">
         <div class="tabTitle">Google Search</div>
         <div class="closeButton">&#10005</div>
-      </div> -->
+      </div>
+
+      <div class="tab">
+        <div class="tabTitle">Google Search</div>
+        <div class="closeButton">&#10005</div>
+      </div>
+
+      <div class="tab">
+        <div class="tabTitle">Google Search</div>
+        <div class="closeButton">&#10005</div>
+      </div>
 
       <div class="tab">
         <div class="tabTitle">Google Search</div>
