--- a/pages/index.html
+++ b/pages/index.html
@@ -27,7 +27,7 @@
 
       <div id="rightPart">
         <div id="leftRightPart">
-          <button class="barButton" id="refreshButton" tabindex="-1" disabled="true">&#10227</button>
+          <button class="barButton" id="refreshButton" tabindex="-1">&#10227</button>
         </div>
         <div id="rightRightPart">
           <button class="barButton" id="settingsButton" tabindex="-1">&#9881</button>
