Add page settings button

--- a/pages/index.html
+++ b/pages/index.html
@@ -17,8 +17,13 @@
     <div id="titleBar">
 
       <div id="leftPart">
-        <button class="barButton" id="backButton" tabindex="-1" disabled="true">&#60</button>
-        <button class="barButton" id="forwardButton" tabindex="-1" disabled="true">&#62</button>
+        <div id="leftLeftPart">
+          <button class="barButton" id="backButton" tabindex="-1" disabled="true">&#60</button>
+          <button class="barButton" id="forwardButton" tabindex="-1" disabled="true">&#62</button>
+        </div>
+        <div id="rightLeftPart">
+          <button class="barButton" id="pageSettingsButton" tabindex="-1">🔰</button>
+        </div>
       </div>
 
       <div id="centerPart">
