--- a/pages/index.html
+++ b/pages/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
+
+    <div id="spacer"></div>
+
     <div id="titleBar">
 
       <div id="leftPart">
